--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev:server": "json-server server.json -w -d 500",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "studio": "npx prisma studio"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
